--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -10,10 +10,22 @@
       <a href="/" class="navbar-brand">Invoicer</a>
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
+
       <ul class="nav navbar-nav">
+
         <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
-            <a ng-href="{{item.link}}">{{item.title}}</a>
+          <a ng-href="{{item.link}}">{{item.title}}</a>
         </li>
+
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">WorkStream <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li ng-repeat="subItem in workStreams">
+                <a ng-href="{{subItem.url}}">{{subItem.title}}</a>
+            </li>
+          </ul>
+        </li>
+
         <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin">Admin</a></li>
       </ul>
 
