--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -11,13 +11,13 @@
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
 
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav" ng-show="isLoggedIn()">
 
         <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
           <a ng-href="{{item.link}}">{{item.title}}</a>
         </li>
 
-        <li class="dropdown">
+        <li class="dropdown" >
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">WorkStream <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li ng-repeat="subItem in workStreams">
