created task panel

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -43,6 +43,7 @@
 @import 'admin/admin.styl';
 @import 'main/main.styl';
 @import 'workStream/workStream.styl';
+@import 'taskPanel/taskPanel.styl';
 // endinjector
 
 .content
