--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -32,19 +32,14 @@
       <ul class="nav navbar-nav navbar-right">
         <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/signup')}"><a href="/signup">Sign up</a></li>
         <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}"><a href="/login">Login</a></li>
-        <li ng-show="isLoggedIn()"><p class="navbar-text">Hello {{ getCurrentUser().name }}</p> </li>
+
+        <li ng-show="isLoggedIn()">
+          <div task-panel></div>
+        </li>
+
         <li ng-show="isLoggedIn()" ng-class="{active: isActive('/settings')}"><a href="/settings"><span class="glyphicon glyphicon-cog"></span></a></li>
         <li ng-show="isLoggedIn()" ng-class="{active: isActive('/logout')}"><a href="" ng-click="logout()">Logout</a></li>
 
-        <li ng-show="isLoggedIn()"
-          <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Task Description">
-              <input type="number" class="form-control hours" placeholder="Hours">
-            </div>
-            <button type="submit" class="btn btn-default">Add</button>
-          </form>
-        </li>
       </ul>
     </div>
 
