feat (TaskPanel): add unit test

--- a/client/components/taskPanel/taskPanel.styl
+++ b/client/components/taskPanel/taskPanel.styl
@@ -1,9 +1,8 @@
 
-.hoursDisplay{
-  display: inline-block;
-  vertical-align: bottom;
-  margin-left: 5px;
-  margin-right: 5px;
-  font-size:27px;
-  font-weight: 600;
-}
+.hoursDisplay
+  display inline-block
+  vertical-align bottom
+  margin-left 5px
+  margin-right 5px
+  font-size 27px
+  font-weight 600
