--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -34,7 +34,7 @@
         <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}"><a href="/login">Login</a></li>
 
         <li ng-show="isLoggedIn()">
-          <div task-panel></div>
+          <task-panel></task-panel>
         </li>
 
         <li ng-show="isLoggedIn()" ng-class="{active: isActive('/settings')}"><a href="/settings"><span class="glyphicon glyphicon-cog"></span></a></li>
