--- a/client/components/taskPanel/taskPanel.styl
+++ b/client/components/taskPanel/taskPanel.styl
@@ -6,3 +6,10 @@
   margin-right 5px
   font-size 27px
   font-weight 600
+
+#taskTime
+  display inline-block
+
+#saveTaskModal
+  .invalid
+    border red 1px
