feat (New Workstream) add pop-up to create a new work stream

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -42,6 +42,7 @@
 @import 'account/login/login.styl';
 @import 'admin/admin.styl';
 @import 'main/main.styl';
+@import 'newWorkstream/newWorkstream.styl';
 @import 'workStream/workStream.styl';
 @import 'taskPanel/taskPanel.styl';
 // endinjector
